--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
@@ -27,9 +27,8 @@
            <div class="container row-reverse">
             <img src="./assets/hero-img.svg" alt="banda tocando">
                 <div>
-                    <h1 class="mt-2">Crie Algo <span class="text-primary decoration">Impactante</span> com música</h1>
-                    <p class="mt-2 mb-2">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsa aperiam ratione
-                        fugit?</p>
+                    <h1 class="mt-2">Cree Algo <span class="text-primary decoration">Impactante</span> com música</h1>
+                    <p class="mt-2 mb-2">La música es la fuente de la vida</p>
                     <a href="" class="btn">Comece Agora</a>
                 </div>
             </div>     
