Segundo cambio de Piano y Teoría

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <article class="card">
                     <img src="./assets/piano.png" alt="icone de piano">
                     <strong>Piano Popular</strong>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit Adipisicing elit.</p>
+                    <p>Aprende a tocar piano como un experto</p>
                     <a href="">
                         <img src="./assets/arrow-right.svg" alt="Ir para página do curso">
                     </a>
@@ -46,7 +46,7 @@
                 <article class="card">
                     <img src="./assets/clef.png" alt="icone da clave sol">
                     <strong>Teoria Musical</strong>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit Adipisicing elit.</p>
+                    <p>La mejora de la vida es música.</p>
                     <a href="">
                         <img src="./assets/arrow-right.svg" alt="Ir para página do curso">
                     </a>
