Cambio de texto en Saxo

--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
                 </article class="card">
                 <article class="card">
                     <img src="./assets/sax.png" alt="icone de saxofone">
-                    <strong>Sax Alto</strong>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit Adipisicing elit.</p>
+                    <strong>Saxo Alto</strong>
+                    <p>Instrumento musical de viento madera, consistente en un tubo doblado en forma de J, con boquilla de madera dotada de una caña o lengüeta, y con llaves..</p>
                     <a href="">
                         <img src="./assets/arrow-right.svg" alt="Ir para página do curso">
                     </a>
